Added Bootstrap and Jumbotron

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,16 @@
   </head>
 
   <body>
+  <div class = "container">
+    <div class="jumbotron">
+      <h1 class="display-4">Twitter Clone</h1>
+      <p class="lead">This is a basic micro blogging application like Twitter developed using Ruby On Rails.</p>
+      <hr class="my-4">
+      <p>Made with love in India. 2020.</p>
+    </div>
+
     <%= yield %>
+    
+  </div>
   </body>
 </html>
